# sticker_eater

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: release.yml
src/: logger.rs  main.rs
