[package]
name = "sticker_eater"
version = "0.1.0"
authors = ["DarkSky <darksky2048@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
chrono = "0.4.19"
futures = "0.3.12"
lazy_static = "1.4.0"
log = "0.4.14"

[dependencies.fern]
version = "0.6.0"
features = ["colored"]

[dependencies.telegram-bot]
version = "0.8.0"
default-features = false
features = ["rustls"]

[dependencies.tokio]
version = "0.2.25"
features = ["macros"]
